# TS

./: .gitignore  LICENSE.txt  README.txt  TSVersion
Analysis/: Analysis.1  Analysis.cpp  AnalyzeHPErrs.cpp  AsciMask2Bin.cpp  BFReference.cpp  BFReference.h  BarCode.cpp  BarCode.h  BaseCaller.cpp  BaseCaller.h  BaseCallerLogFiles.cpp  BeadmaskMerge.cpp  BeadmaskParse.cpp  BkgModelCudaKernels.h  BubbleFilter.cpp  BubbleFilter.h  ByteSwapUtils.h  CMakeLists.TMAP.txt  CMakeLists.txt  ChipIdDecoder.cpp  CommandLineOpts.cpp  CommandLineOpts.h  CountBubbles.cpp  Coverage.cpp  DataCube.h  DataTable.h  Doxyfile  FileEquivalent.cpp  FileEquivalent.h  FillCriticalFramesJob.h  Filter.h  FilterFFT.h  FindSlopeChange.h  Flow.cpp  Flow.h  FlowDiffStats.cpp  FlowDiffStats.h  GenomeDiffStats.cpp  GenomeDiffStats.h  GetRawAvgTraces.cpp  (+136 more)
Analysis/AnalysisOrg/: Analysis.cpp  BaseCallerControlOpts.cpp  BaseCallerControlOpts.h  BeadfindControlOpts.cpp  BeadfindControlOpts.h  BkgControlOpts.cpp  BkgControlOpts.h  BkgDataPointers.cpp  BkgDataPointers.h  BkgFitterTracker.cpp  BkgFitterTracker.h  BkgModelHdf5.cpp  BkgModelHdf5.h  ClonalFilter.cpp  ClonalFilter.h  CommandLineOpts.cpp  CommandLineOpts.h  EmptyTraceTracker.cpp  EmptyTraceTracker.h  FilterControlOpts.cpp  FilterControlOpts.h  FlowSequence.cpp  FlowSequence.h  GPUBlockProcessing.cpp  GPUBlockProcessing.h  GlobalDefaultsFromBkgControl.cpp  GlobalDefaultsFromBkgControl.h  ImageControlOpts.cpp  ImageControlOpts.h  ImageLoader.cpp  ImageLoader.h  ImageLoaderQueue.cpp  ImageLoaderQueue.h  ImageSpecClass.cpp  ImageSpecClass.h  MaskFunctions.cpp  MaskFunctions.h  ProcessImageToWell.cpp  ProcessImageToWell.h  RawWellsWriteJob.h  (+21 more)
Analysis/Barcode/: BarCode.cpp  BarCode.h  BarCodeTest.cpp  barcodeMaskParse.cpp  barcodeSplit.cpp
Analysis/BaseCaller/: BarcodeClassifier.cpp  BarcodeClassifier.h  BarcodeDatasets.cpp  BarcodeDatasets.h  BaseCaller.cpp  BaseCaller.cpp~  BaseCaller.h  BaseCallerFilters.cpp  BaseCallerFilters.h  BaseCallerLite.cpp  BaseCallerLogFiles.cpp  BaseCallerMetricSaver.cpp  BaseCallerMetricSaver.h  BaseCallerParameters.cpp  BaseCallerParameters.h  BaseCallerRecalibration.cpp  BaseCallerRecalibration.h  BaseCallerUtils.h  CFIEDRFit.h  CafieSolver.h  DPTreephaser.cpp  DPTreephaser.h  DroopFit.h  MolecularTagTrimmer.cpp  MolecularTagTrimmer.h  NNModel.cpp  NNModel.h  OrderedDatasetWriter.cpp  OrderedDatasetWriter.h  OrderedRegionSFFWriter.cpp  OrderedRegionSFFWriter.h  PIDloop.cpp  PIDloop.h  PerBaseQual.cpp  PerBaseQual.h  PhaseEstimator.cpp  PhaseEstimator.h  PhaseFit.cpp  PhaseFit.h  PhaseFitCfIe.cpp  (+16 more)
Analysis/BkgModel/: BeadParams.cpp  BeadParams.h  BeadScratch.cpp  BeadScratch.h  BeadTracker.cpp  BeadTracker.h  BkgFitMatrixPacker.h  BkgFitOptim.cpp  BkgFitOptim.h  BkgFitStructures.cpp  BkgFitStructures.h  BkgMagicDefines.h  BkgModSingleFlowFit.h  BkgModSingleFlowFitKrate.h  BkgModel.cpp  BkgModel.cu  BkgModel.h  BkgModelCuda.h  BkgModelCudaKernels.h  BkgSearchAmplitude.cpp  BkgSearchAmplitude.h  BkgTrace.cpp  BkgTrace.h  CrossTalkSpec.cpp  CrossTalkSpec.h  DNTPRiseModel.cpp  DNTPRiseModel.h  DarkHalo.cpp  DarkMatter.cpp  DarkMatter.h  DiffEqModel.cpp  DiffEqModel.h  EmphasisVector.cpp  EmphasisVector.h  FitControl.cpp  FitControl.h  FlowBuffer.h  GaussianExponentialFit.h  GlobalDefaultsForBkgModel.cpp  GlobalDefaultsForBkgModel.h  (+31 more)
Analysis/Calibration/: Calibration.cpp  CalibrationHelper.cpp  CalibrationHelper.h  FlowAlignment.cpp  FlowAlignment.h  HistogramCalibration.cpp  HistogramCalibration.h  LinearCalibrationModel.cpp  LinearCalibrationModel.h
Analysis/ClonalFilter/: mixed.cpp  mixed.h  polyclonal_filter.cpp  polyclonal_filter.h
Analysis/Converter/: bam2sff.cpp  sff2bam.cpp
Analysis/DataViewer/: AlignmentSpatial.cpp  AlignmentSpatial.h  AlignmentTab.cpp  AlignmentTab.h  BfMaskSpatial.cpp  BfMaskSpatial.h  BfMaskTab.cpp  BfMaskTab.h  DataViewer.pro  GainSpatial.cpp  GainSpatial.h  GainTab.cpp  GainTab.h  MainForm.ui.qml  MicroscopeSpatial.cpp  MicroscopeSpatial.h  MicroscopeTab.cpp  MicroscopeTab.h  NoiseSpatial.cpp  NoiseSpatial.h  NoiseTab.cpp  NoiseTab.h  NumpySpatial.cpp  NumpySpatial.h  NumpyTab.cpp  NumpyTab.h  README  RawSpatial.cpp  RawSpatial.h  RawTab.cpp  RawTab.h  SpatialPlot.cpp  SpatialPlot.h  WellsSpatial.cpp  WellsSpatial.h  WellsTab.cpp  WellsTab.h  dialog.cpp  dialog.h  main.cpp  (+3 more)
Analysis/FlowspaceCalibration/: README
Analysis/Image/: AdvCompr.cpp  AdvCompr.h  ChipIdDecoder.h  (+45 more)
RSM/: CMakeLists.txt  version
alignTools/: CMakeLists.txt  README.txt  alignmentQC.pl  bamToAccuracy.pl  build_genome_index.pl  getref  merge_alignTable.py  merge_alignment.summary.py  patch.MarkDuplicates  patchMarkDuplicates  srcmkr.sh  trimfastq.pl  updateref.py  validate_reference.pl  version
dbReports/: .coveragerc  .pep8  .pylintrc  CMakeLists.txt  DEVELOPER  README  README.md  README.txt  celeryconfig.py  fabfile.py  init.sh  manage.py  srcmkr.sh  version
django/: CMakeLists.txt  README.txt.in  celery_sysinfo_patch  requirements.txt
gpu/: CMakeLists.txt  bandwidthTest  bandwidthTest.cu  create_nvidia_files  deviceQuery  deviceQuery.cpp  version
pipeline/: CMakeLists.txt  cluster_settings.py  version
plugin/: .gitattributes  .lfsconfig  CMakeLists.txt  implementation-dirs  plugin_functions  srcmkr.sh  version
publishers/: CMakeLists.txt  version
torrentPy/: BUILD_DEBIAN.txt  CMakeLists.txt  INSTALL  setup_dev.py.in  version
torrentR/: CMakeLists.txt  DESCRIPTION  INSTALL  NAMESPACE  README.txt  bionic-deps.txt  configure  srcmkr.sh  trusty-deps.txt  version
tsconfig/: CMakeLists.txt  README.clusters  TSarchive.sh  TSchkconfig  TSconfig  TSdns  TSquery  TSsetproxy  TSstaticip  clear_test_data  cron_purge.sh  iontorrent_master.in  leafBlower.sh  primaryNodePrep.sh  secondaryNodePrep.sh  stresstest.tgz  torrent_suite_version.in  ts_functions  ts_params  version
tsvm/: CMakeLists.txt  README.txt.in  Vagrantfile  private_key_rsa  public_key_rsa  tsvm-ctrl  tsvm-enable-nfs-rule  tsvm-include  tsvm-isvtenabled  tsvm-postprov.sh  tsvm-prepare  tsvm-setup  tsvm-status  tsvm-versions  vagrant_sudoers  version
(+6270 files in other folders)
